# Jobs-Recon

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: sample_postings.json  target-ai-engineer.json  target_brief.json
src/jobs_recon/: __init__.py  __main__.py  brief.py  cli.py  discovery_provider.py  google_grounding.py  google_search.py  main.py  models.py  parser.py  search_discovery.py  search_feasibility.py  source_feasibility.py  target.py
src/jobs_recon/brief/: __init__.py  constants.py  decision.py  io.py  report.py  target.py
src/jobs_recon/discovery/: __init__.py  decision_summary.py  leads.py  normalize.py  prompts.py  report.py  types.py
src/jobs_recon/discovery/providers/: __init__.py  fixture.py  google.py  protocol.py
src/jobs_recon/sources/: __init__.py  profiles.py  report.py
src/utils/: parser.py
tests/: test_brief.py  test_google_dorking.py  test_parser.py  test_search_grounding.py  test_source_feasibility.py  test_target.py
tests/brief/: test_brief.py  test_decision.py  test_parser.py  test_target.py
tests/discovery/: test_decision_summary.py  test_lead_triage.py  test_search_grounding.py
tests/fixtures/: google_grounding_response.json  google_search_response.json
tests/sources/: test_source_feasibility.py
