[project]
name = "jobs-recon"
version = "0.3.2"
description = "CLI-first job-market reconnaissance tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
grounding = ["google-genai>=1.0"]

[project.scripts]
jobs-recon = "jobs_recon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobs_recon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
